[gd_scene load_steps=2 format=3 uid="uid://cqdlo0paws15f"]

[ext_resource type="Script" path="res://Scenes/end_menu.gd" id="1_8q8u1"]

[node name="EndMenu" type="Control"]
layout_mode = 3
anchor_left = -0.501
anchor_top = -0.494
anchor_right = 0.499
anchor_bottom = 0.506
offset_left = 4.15204
offset_top = -3.888
offset_right = 4.15198
offset_bottom = -3.88803
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8q8u1")
metadata/_edit_group_ = true

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.466667)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="RestartButton" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(200, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Restart"

[node name="BackButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Back to menu"

[node name="QuitButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Quit"

[connection signal="pressed" from="CenterContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
